--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>code-portfolio</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Stay Focused On <span class="orange">Mission 2022</span></h1>
+
     
 </body>
 </html>
